vendor/bundler/ruby/2.6.0/extensions/-darwin-20/2.6.0/ffi-1.12.2/gem_make.out
current directory: /Users/yutakayamaki/development_of_app/sprout-fc/yy-sprout/vendor/bundler/ruby/2.6.0/gems/ffi-1.12.2/ext/ffi_c
/Users/yutakayamaki/.rbenv/versions/2.6.4/bin/ruby -I /Users/yutakayamaki/.rbenv/versions/2.6.4/lib/ruby/2.6.0 -r ./siteconf20210221-46416-ulaskc.rb extconf.rb
checking for ffi_call() in -lffi... yes
checking for ffi_closure_alloc()... yes
checking for shlwapi.h... no
checking for rb_thread_call_without_gvl()... yes
checking for ruby_native_thread_p()... yes
checking for ruby_thread_has_gvl_p()... yes
checking for ffi_prep_cif_var()... yes
checking for ffi_raw_call()... yes
checking for ffi_prep_raw_closure()... yes
creating extconf.h
creating Makefile

current directory: /Users/yutakayamaki/development_of_app/sprout-fc/yy-sprout/vendor/bundler/ruby/2.6.0/gems/ffi-1.12.2/ext/ffi_c
make "DESTDIR=" clean

current directory: /Users/yutakayamaki/development_of_app/sprout-fc/yy-sprout/vendor/bundler/ruby/2.6.0/gems/ffi-1.12.2/ext/ffi_c
make "DESTDIR="
compiling AbstractMemory.c
compiling ArrayType.c
compiling Buffer.c
compiling Call.c
compiling ClosurePool.c
compiling DynamicLibrary.c
compiling Function.c
Function.c:867:17: error: implicit declaration of function 'ffi_prep_closure' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
    ffiStatus = ffi_prep_closure(code, &fnInfo->ffi_cif, callback_invoke, closure);
                ^
1 error generated.
make: *** [Function.o] Error 1

make failed, exit code 2
